<resources>
    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="main_startgame_btn_text">Starta spel</string>
    <string name="main_about_btn_text">Om</string>
    <string name="main_title_text">Huvudmeny</string>
    <string name="game_user_guess_hint_text">Vad är din gissning?</string>
    <string name="game_guess_btn_text">Gissa!</string>
    <string name="game_guesses_left_label">Gissningar kvar:</string>
    <string name="game_wrong_guesses_label">Felaktiga svar:</string>
    <string name="error_fail_input_text">Du måste gissa något!</string>
    <string name="error_char_used_text">Det har du redan gissat! </string>
    <string name="result_back_to_menu_btn_text">Gå tillbaka till huvudmenyn</string>
    <string name="result_victory_text">Du gissade rätt, med %d gissningar kvar!</string>
    <string name="result_victory_text_1left">Du gissade rätt, med 1 gissning kvar!</string>
    <string name="result_lose_text">Du blev hängd!</string>
    <string name="result_secret_word_text">Det hemliga ordet var: %s</string>
    <string name="about_made_by_text">Made by:\nChristian Karlsson</string>
    <string name="about_info_text">Du har 10 gissningar på dig att lista ut det maskerade ordet innan du blir hängd!</string>
    <string name="library_no_words_found">Hittar inga ord!</string>
    <string name="main_library_btn_text">Bibliotek</string>
    <string name="menu_main_title">Huvudmeny</string>
    <string name="menu_result_title">Resultat</string>
    <string name="menu_about_title">Om</string>
    <string name="menu_library_title">Bibliotek</string>
    <string name="main_resume_btn_txt">Återuppta spel</string>
</resources>