<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_gradient"
    tools:context="com.example.christiankarlsson.hangman.ui.MainActivity">

    <Button
        android:text="@string/main_startgame_btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:id="@+id/button1"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:onClick="startGame"
        android:background="@drawable/bg_btn"/>

    <Button
        android:text="@string/main_about_btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:layout_below="@+id/button1"
        android:textAllCaps="false"
        android:onClick="aboutApp"
        android:background="@drawable/bg_btn"/>

    <Button
        android:text="@string/main_library_btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:layout_below="@+id/button2"
        android:textAllCaps="false"
        android:onClick="showLibrary"
        android:background="@drawable/bg_btn"/>




</RelativeLayout>
